--- a/src/App.css
+++ b/src/App.css
@@ -2,17 +2,6 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -24,15 +13,26 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.h1-ghn {
+  /* font-weight: 500; */
+  font-family: 'Quicksand', sans-serif;
+}
+.h2-ghn {
+  /* font-weight: 450; */
+  font-family: 'Quicksand', sans-serif;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.p-ghn {
+  /* font-weight: 300; */
+  font-family: 'Quicksand', sans-serif;
+}
+
+.ghn-button {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.link-style:hover {
+  text-shadow:2px 2px 0px #ffdc2c;
 }
