--- a/src/App.css
+++ b/src/App.css
@@ -18,21 +18,6 @@
   filter: drop-shadow(0 0 2em #8a8d8eaa);
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
 .card {
   padding: 2em;
 }
@@ -41,18 +26,24 @@
   color: #888;
 }
 
+h1 {
+  font-size: 2em;
+  font-weight: 700;
+  font-family: 'Quicksand', sans-serif;
+
+}
 
 .h1-ghn {
-  /* font-weight: 500; */
+  font-weight: 900;
   font-family: 'Quicksand', sans-serif;
 }
 .h2-ghn {
-  /* font-weight: 450; */
+  font-weight: 450;
   font-family: 'Quicksand', sans-serif;
 }
 
 .p-ghn {
-  /* font-weight: 300; */
+  font-weight: 300;
   font-family: 'Quicksand', sans-serif;
 }
 
@@ -63,6 +54,20 @@
 }
 
 .link-style:hover {
-  text-shadow:2px 2px 0px #ffdc2c;
+  text-shadow: 2px 2px 0px #ffdc2c;
+}
+.link-style {
+  color: black;
+  font-weight: 500;
+  text-decoration: none;
+  font-family: 'Quicksand', sans-serif;
 }
 
+.bio-style:hover {
+  text-shadow: 2px 2px 0px #ffdc2c;
+}
+.bio-style {
+  color: black;
+  text-decoration: none;
+  font-weight: 600;
+}
