--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 #root {
+  font-family: 'Quicksand', sans-serif;
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
@@ -24,6 +25,10 @@
 
 .read-the-docs {
   color: #888;
+}
+
+body {
+  font-family: 'Quicksand', sans-serif;
 }
 
 h1 {
@@ -70,4 +75,9 @@ h1 {
   color: black;
   text-decoration: none;
   font-weight: 600;
+}
+
+@font-face {
+  font-family: 'Quicksand';
+  src: url('./assets/folder/Quicksand-VariableFont_wght.ttf') format('truetype');
 }
